Water Metering, anomaly implemented, some fixes, debugging remains.